--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Bienvenue !{% endblock %}</title>
         {% block stylesheets %}
-        <link href='http://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
+        <link href="//fonts.googleapis.com/css?family=Lily+Script One:400" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{{asset('bundles/InstantSoin/css/bootstrap.css')}}">
         <link rel="stylesheet" href="{{asset('bundles/InstantSoin/css/style.css')}}">
         {% endblock %}
@@ -77,7 +76,7 @@
                                     <hr>
                                     {% endif %}
                                     {% if is_granted('ROLE_ETUDIANT') or is_granted('ROLE_PROFESSEUR') or is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
-                                        <a href="#">Panier</a>
+                                        <a href="#">Mon panier</a>
                                     {% endif %}
                             </div>
                         </nav>
@@ -102,7 +101,35 @@
             </footer>
         </section>
 
-            {% block javascripts %}{% endblock %}
+            {% block javascripts %}
+            <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+            <script type="text/javascript">
+            function initialisation(){
+                var centreCarte = new google.maps.LatLng(49.023402, 1.705735);
+                var optionsCarte = {
+                    zoom: 10,
+                    center: centreCarte,
+                    marker: true,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                }
+
+                var maCarte = new google.maps.Map(document.getElementById("EmplacementDeMaCarte"), optionsCarte);
+
+                var marker = new google.maps.Marker({
+                    position: centreCarte,
+                    map: maCarte
+                });
+
+                var optionsCercle = {
+                    map: maCarte,
+                    center: maCarte.getCenter(),
+                    radius: 10000
+                }
+                var monCercle = new google.maps.Circle(optionsCercle);
+            }
+            google.maps.event.addDomListener(window, 'load', initialisation);
+            </script>
+            {% endblock %}
 
     </body>
 </html>
