--- a/src/InstantSoin/ProductBundle/Resources/views/Accueil/sidebar.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Accueil/sidebar.html.twig
@@ -1,21 +1,38 @@
 <section>
-    <h3>Informations</h3>
-	<p><a href="#">Qui suis-je?</a></p>
-	<br><br>
+    <h3>Informations utiles</h3>
+	<p><a href="{{ path( 'whoswho' ) }}">Qui suis-je?</a></p>
 
-	<p>Zone de déplacement</p>
+	<hr>
 
-	<blockquote>Rayon de 15 km aux alentours de Follainville
-	<br>
-	Du lundi au samedi de 8h30 à 20h00.
-	<br>
-	Suivant les secteurs je me déplace pour un montant minimum de 15€.
-	<br>
-	N'hésitez pas à me contacter pour tous renseignement:
-	<br>
-	06-11-57-10-10 ou <a href="linstantsoin@free.fr">linstantsoin@free.fr</a>
-	<br>
-	<br>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20928.12619549736!2d1.7026790000000038!3d49.02930700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6c081e583f09d%3A0x40b82c3688c4030!2sFollainville-Dennemont!5e0!3m2!1sfr!2sfr!4v1416843250376" width="280" height="210" frameborder="0" style="border:0"></iframe>
+	<p>Zone de déplacement :</p>
+	<blockquote>
+		Rayon de 15 km aux alentours de Follainville
+		<br>
+		Suivant les secteurs je me déplace pour un montant minimum de 15€.</blockquote>
+
+	<div id="EmplacementDeMaCarte"></div>
+
+	<hr>
+
+	<p>Horaires :</p>
+	<blockquote>
+		Du lundi au samedi de 8h30 à 20h00.
 	</blockquote>
+
+	<hr>
+
+	<p>N'hésitez pas à me contacter pour tout renseignement:</p>
+	<blockquote>
+	06-11-57-10-10 ou <br><a href="mailto:linstantsoin@free.fr">linstantsoin@free.fr</a>
+	</blockquote>
+
+	<hr>
+	<div>
+	<object type="application/x-shockwave-flash" data="{{ asset('bundles/InstantSoin/Music/dewplayer-playlist.swf') }}" margin="auto" width="250" height="125" id="dewplayer" name="dewplayer">
+	<param name="wmode" value="transparent" />
+	<param name="movie" value="{{ asset('bundles/InstantSoin/Music/dewplayer-playlist.swf') }}" />
+	<param name="flashvars" value="showtime=true&autostart=true&randomplay=true&autoreplay=true&volume=50&xml={{ asset('bundles/InstantSoin/Music/playlist.xml') }}" />
+	</object>
+	</div>
+
 </section>
