ajout user bundle

--- a/src/InstantSoin/ProductBundle/Resources/views/Accueil/sidebar.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Accueil/sidebar.html.twig
@@ -6,9 +6,10 @@
 
 	<p>Zone de déplacement :</p>
 	<blockquote>
-		Rayon de 15 km aux alentours de Follainville
+		Rayon de 15 km aux alentours de Follainville.
 		<br>
-		Suivant les secteurs je me déplace pour un montant minimum de 15€.</blockquote>
+		Suivant les secteurs je me déplace pour un montant minimum de 15€.
+	</blockquote>
 
 	<div id="EmplacementDeMaCarte"></div>
 
