--- a/src/InstantSoin/ProductBundle/Resources/views/Accueil/whoswho.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Accueil/whoswho.html.twig
@@ -7,7 +7,7 @@
 	Titulaire d'un cap et d'un BP d'esthétique-cosmétique et fort de mes 13 ans d'experience en institut sur Paris et en région parisienne, j'ai décidé de me mettre à domicile pour privilégier votre bien-être et votre confort tout cela sans stress et sans attente.
 	</blockquote>
 	<blockquote>
-	Votre bien-être étant ma priorité, j'ai choisi de travailler avec des produits naturels et certifiés bio de la marque Clairjoie pour la peau mais aussi XXXXX pour les ongles. Pour une hygiène parfaite le linge est à usage unique et le matériel est stérilisé et désinfecté après chaque cliente.
+	Votre bien-être étant ma priorité, j'ai choisi de travailler avec des produits naturels et certifiés bio de la marque Clairjoie pour la peau mais aussi Shellac pour les ongles. Pour une hygiène parfaite le linge est à usage unique et le matériel est stérilisé et désinfecté après chaque cliente.
 	</blockquote>
 	<br>
 	<blockquote>
@@ -19,11 +19,11 @@
 	</blockquote>
 	<br>
 	<blockquote>
-	A très bientôt, votre esthéticienne, Sandra.
+	A  très bientôt, votre esthéticienne, Sandra.
 	</blockquote>
 
 	<a target=_blank href="{{ path( 'Lien_Clairjoie' ) }}"><img src="{{ asset('bundles/InstantSoin/Images/Clairjoie.jpg') }}" alt="Impossible dafficher limage"></a>
 
-	<a href="#"><img src="{{ asset('bundles/InstantSoin/Images/Clairjoie.jpg') }}" alt="Impossible d'afficher l\'image"></a>
+	<a target=_blank href="{{ path( 'Lien_Cnd_shellac' ) }}"><img src="{{ asset('bundles/InstantSoin/Images/Cnd_shellac.png') }}" alt="Impossible dafficher limage"></a>
 
 {% endblock %}
