--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,7 @@
 
                     {% block navigation %}
                         <nav>
-                        <img class="logo" src="{{asset('bundles/InstantSoin/Images/logo.jpg')}}" alt="Impossible à charger">
+                        <img class="logo" src="{{asset('bundles/InstantSoin/Images/logo.png')}}" alt="Impossible à charger">
                             <ul class="menu">
                                                                     
                                 <li>
@@ -46,7 +46,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="{{ path( 'services_overall' ) }}">Matériels</a>
+                                    <a href="{{ path( 'equipment_overall' ) }}">Matériels</a>
                                 </li>
 
                                 <li>
@@ -58,24 +58,24 @@
                             </ul>
                             <div class="connexion">
                                     {% if app.user %} 
-                                        <a href="#">Me déconnecter</a>
+                                        <a href="{{ path( 'logout' ) }}">Me déconnecter</a>
                                     {% else  %}
-                                        <a href="#">Me connecter</a>
+                                        <a href="{{ path( 'login' ) }}">Me connecter</a>
                                     {% endif %}
                                     <hr>
                                     {% if is_granted('ROLE_ADMIN') %}
-                                        <a href="#">Administration</a>
+                                        <a href="{{ path( 'admin' ) }}">Administration</a>
                                     <hr>
                                     {% endif %}
-                                    {% if is_granted('ROLE_BIBLIOTHECAIRE') %}
-                                        <a href="#">Administration</a>
+                                    {% if is_granted('ROLE_ESTHETICIENNE') %}
+                                        <a href="{{ path('bibliotheque_bibliothecaire') }}">Administration</a>
                                     <hr>
                                     {% endif %}
-                                    {% if is_granted('ROLE_ETUDIANT') or is_granted('ROLE_PROFESSEUR') %}
-                                        <a href="#">Profil</a>
+                                    {% if is_granted('ROLE_USER') %}
+                                        <a href="{{ path( 'bibliotheque_profil' ) }}">Profil</a>
                                     <hr>
                                     {% endif %}
-                                    {% if is_granted('ROLE_ETUDIANT') or is_granted('ROLE_PROFESSEUR') or is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
+                                    {% if is_granted('ROLE_USER') or is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
                                         <a href="#">Mon panier</a>
                                     {% endif %}
                             </div>
@@ -107,7 +107,7 @@
             function initialisation(){
                 var centreCarte = new google.maps.LatLng(49.023402, 1.705735);
                 var optionsCarte = {
-                    zoom: 10,
+                    zoom: 9,
                     center: centreCarte,
                     marker: true,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
@@ -123,7 +123,7 @@
                 var optionsCercle = {
                     map: maCarte,
                     center: maCarte.getCenter(),
-                    radius: 10000
+                    radius: 15000
                 }
                 var monCercle = new google.maps.Circle(optionsCercle);
             }
