User actif + ajout tous les liens produits et services + CSS

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,23 +25,24 @@
                                 <li>
                                     <a href="{{ path( 'product_overall' ) }}">Produits</a>
                                     <ul>
-                                            <li><a href="#">Crèmes de jour / crèmes de nuit</a></li>
-                                            <li><a href="#">Gommages et masques</a></li>
-                                            <li><a href="#">Maquillage</a></li>
-                                            <li><a href="#">Démaquillants et lotions</a></li>
-                                            <li><a href="#">Parfumerie</a></li>
+                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
+                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
+                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
+                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
+                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
                                     </ul>
                                 </li>
 
                                 <li>
                                     <a href="{{ path( 'services_overall' ) }}">Services</a>
                                     <ul>
-                                            <li><a href="#">Les soins visage</a></li>
-                                            <li><a href="#">Les soins du corps</a></li>
-                                            <li><a href="#">Massages</a></li>
-                                            <li><a href="#">Epilations</a></li>
-                                            <li><a href="#">Soin des ongles</a></li>
-                                            <li><a href="#">Les forfaits soin</a></li>
+                                            <li><a href="services_face">Les soins visage</a></li>
+                                            <li><a href="services_body">Les soins du corps</a></li>
+                                            <li><a href="services_soin">Soin des ongles</a></li>
+                                            <li><a href="services_forfaits">Les forfaits soin</a></li>
+                                            <li><a href="services_massages">Massages</a></li>
+                                            <li><a href="services_peeling">Epilations</a></li>
+
                                     </ul>
                                 </li>
 
