--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
@@ -1,5 +1,26 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-    <h1>Les produits cosmétiques proposés :</h1>
+    <h3>Les produits cosmétiques proposés :</h3>
+	
+	<form action="{{ path( 'product_cremes' ) }}">
+   	<input type="submit" class="cremes" name="cremes" value="Crêmes de jour&#10&#13et&#10&#13Crêmes de nuit">
+   	</form>
+
+	<form action="{{ path( 'product_gommages' ) }}">
+   	<input type="submit" class="gommages" name="gommages" value="Gommages&#10&#13et&#10&#13masques">
+	</form>
+
+   	<form action="{{ path( 'product_maquillage' ) }}">
+   	<input type="submit" class="maquillage" name="maquillage" value="Maquillage">
+	</form>
+
+   	<form action="{{ path( 'product_lotions' ) }}">
+   	<input type="submit" class="lotions" name="lotions" value="Démaquillants&#10&#13et&#10&#13lotions">
+	</form>
+
+   	<form action="{{ path( 'product_parfumerie' ) }}">
+   	<input type="submit" class="parfumerie" name="parfumerie" value="Parfumerie">
+	</form>
+
 {% endblock %}
