css + ajout boutons sur services + font lily + photos boutons

--- a/src/InstantSoin/ProductBundle/Resources/views/Equipment/Equipment_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Equipment/Equipment_overall.html.twig
@@ -1,5 +1,5 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-    <h1>Les matériels d'estétique proposés :</h1>
+    <h3>Les matériels d'esthétique proposés :</h3>
 {% endblock %}
