--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
@@ -5,6 +5,7 @@
 	
 	<form action="{{ path( 'product_cremes' ) }}">
    	<input type="submit" class="cremes" name="cremes" value="Crêmes de jour&#10&#13et&#10&#13Crêmes de nuit">
+      <img src="{{asset('bundles/InstantSoin/Images/Buttons/creme.jpeg')}}" alt="">
    	</form>
 
 	<form action="{{ path( 'product_gommages' ) }}">
