--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
@@ -1,31 +1,38 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-    <h3>Les produits cosmétiques proposés :</h3>
+   <h3>Les produits cosmétiques proposés :</h3>
 	
-	<form action="{{ path( 'product_cremes' ) }}">
-   	<input type="submit" class="cremes" name="cremes" value="Crêmes de jour&#10&#13et&#10&#13Crêmes de nuit">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/creme.jpeg')}}" alt="">
-   	</form>
+      <div>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/creme.jpeg')}}" class="serviceimg" alt="Image impossible à charger">
+      	<form action="{{ path( 'product_cremes' ) }}">
+         	<input type="submit" name="cremes" value="Crêmes de jour et Crêmes de nuit" alt="Cliquez pour accéder à la rubrique crèmes">
+         </form>
+         
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/maquillage.png')}}" alt="Image impossible à charger">
+         <form action="{{ path( 'product_maquillage' ) }}">
+            <input type="submit" name="maquillage" value="Maquillage">
+         </form>
+   	</div>
 
-	<form action="{{ path( 'product_gommages' ) }}">
-   	<input type="submit" class="gommages" name="gommages" value="Gommages&#10&#13et&#10&#13masques">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/masque.jpg')}}" alt="">
-	</form>
-
-   	<form action="{{ path( 'product_maquillage' ) }}">
-   	<input type="submit" class="maquillage" name="maquillage" value="Maquillage">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/maquillage.jpg')}}" alt="">
-	</form>
-
-   	<form action="{{ path( 'product_lotions' ) }}">
-   	<input type="submit" class="lotions" name="lotions" value="Démaquillants&#10&#13et&#10&#13lotions">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/lotion.jpg')}}" alt="">
-	</form>
-
-   	<form action="{{ path( 'product_parfumerie' ) }}">
-   	<input type="submit" class="parfumerie" name="parfumerie" value="Parfumerie">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/parfumerie.jpg')}}" alt="">
-	</form>
+      <div>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/masque.jpg')}}" class="serviceimg" alt="Image impossible à charger">
+         <form action="{{ path( 'product_gommages' ) }}">
+            <input type="submit" name="gommages" value="Gommages et masques">
+         </form>
+         
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/lotion.jpg')}}" alt="Image impossible à charger">
+         <form action="{{ path( 'product_lotions' ) }}">
+         	<input type="submit" name="lotions" value="Démaquillants et lotions">
+         </form>
+   	</div>
+      
+      <div>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/parfumerie.jpg')}}" alt="Image impossible à charger">
+      	<form action="{{ path( 'product_parfumerie' ) }}">
+         	<input type="submit" name="parfumerie" value="Parfumerie">
+         </form>
+         
+	   </div>
 
 {% endblock %}
