--- a/src/InstantSoin/ProductBundle/Resources/views/Services/Services_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Services/Services_overall.html.twig
@@ -1,36 +1,42 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-    <h3>Les services de soins à domicile effectués :</h3>
+   <h3>Les services de soins à domicile effectués :</h3>
 
-	<form action="{{ path( 'services_face' ) }}">
-   	<input type="submit" class="face" name="face" value="Les soins&#10&#13visage">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/face.jpg')}}" alt="">
-   	</form>
+      <div>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/face.jpg')}}" alt="Image impossible à charger">
+      	<form action="{{ path( 'services_face' ) }}">
+         	<input type="submit" name="face" value="Les soins visage">
+         </form>
 
-	<form action="{{ path( 'services_body' ) }}">
-   	<input type="submit" class="body2" name="body" value="Les soins&#10&#13du corps">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/.jpeg')}}" alt="">
-	</form>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/soinscorps.jpg')}}" alt="Image impossible à charger">
+      	<form action="{{ path( 'services_body' ) }}">
+         	<input type="submit" name="body" value="Les soins du corps">
+      	</form>
+      </div>
 
-	<form action="{{ path( 'services_soins' ) }}">
-   	<input type="submit" class="soins" name="soins" value="Les soins&#10&#13des ongles">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/manucure.jpg')}}" alt="">
-	</form>
+      <div>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/manucure.jpg')}}" alt="Image impossible à charger">
+      	<form action="{{ path( 'services_soins' ) }}">
+         	<input type="submit" name="soins" value="Les soins des ongles">
+         </form>
 
-	<form action="{{ path( 'services_forfaits' ) }}">
-   	<input type="submit" class="forfaits" name="forfaits" value="Les forfaits">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/.jpeg')}}" alt="">
-	</form>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/.jpeg')}}" alt="Image impossible à charger">
+      	<form action="{{ path( 'services_forfaits' ) }}">
+         	<input type="submit" name="forfaits" value="Les forfaits">
+      	</form>
+      </div>
 
-   	<form action="{{ path( 'services_massages' ) }}">
-   	<input type="submit" class="massages" name="massages" value="Les massages">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/massages.jpg')}}" alt="">
-	</form>
+      <div>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/massages.jpg')}}" alt="Image impossible à charger">
+         <form action="{{ path( 'services_massages' ) }}">
+         	<input type="submit" name="massages" value="Les massages">
+      	</form>
 
-   	<form action="{{ path( 'services_peeling' ) }}">
-   	<input type="submit" class="peeling" name="peeling" value="Les épilations">
-      <img src="{{asset('bundles/InstantSoin/Images/Buttons/epilation.jpg')}}" alt="">
-	</form>
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/epilation.jpg')}}" alt="Image impossible à charger">
+         <form action="{{ path( 'services_peeling' ) }}">
+         	<input type="submit" name="peeling" value="Les épilations">
+         </form>
+      </div>
 
 {% endblock %}
