--- a/src/InstantSoin/UserBundle/Resources/views/Security/profil.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/profil.html.twig
@@ -2,9 +2,9 @@
 {% block body %}
 <h1>Votre profil</h1>
 <ul class="menu">
-	<li><a href="#">Mes emprunts</a></li>
-	<li><a href="#">Mes réservations</a></li>
-	<li><a href="{{ path( 'profil_info', {'username' : username } ) }}">Mes informations</a></li>
+	<li><a href="#">TBD</a></li>
+	<li><a href="#">TBD</a></li>
+	<li><a href="{{ path( 'user_profil', {'username' : username } ) }}">Mes informations</a></li>
 </ul>
 
 {% endblock %}
