--- a/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
@@ -2,9 +2,9 @@
 {% block body %}
 <h1>Profil</h1>
 <ul class="menu">
-	<li><a href="#">Mes emprunts</a></li>
-	<li><a href="#">Mes réservations</a></li>
-	<li><a href="{{ path( 'bibliotheque_index' ) }}">Mes informations</a></li>
+	<li><a href="#">TBD</a></li>
+	<li><a href="#">TBD</a></li>
+	<li><a href="{{ path( 'user_profil' ) }}">Mes informations</a></li>
 </ul>
 <h1>Edition de votre profil</h1>
 
