changement menu + materiels + qques CSS

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,18 +23,7 @@
                             <ul class="menu">
                                                                     
                                 <li>
-                                    <a href="{{ path( 'product_overall' ) }}">Produits</a>
-                                    <ul>
-                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
-                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
-                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
-                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
-                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
-                                    </ul>
-                                </li>
-
-                                <li>
-                                    <a href="{{ path( 'services_overall' ) }}">Services</a>
+                                    <a href="{{ path( 'services_overall' ) }}">Prestations</a>
                                     <ul>
                                             <li><a href="services_face">Les soins visage</a></li>
                                             <li><a href="services_body">Les soins du corps</a></li>
@@ -47,7 +36,15 @@
                                 </li>
 
                                 <li>
-                                    <a href="{{ path( 'equipment_overall' ) }}">Matériels</a>
+                                    <a href="{{ path( 'product_overall' ) }}">La boutique</a>
+                                    <ul>
+                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
+                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
+                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
+                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
+                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
+                                            <li><a href="{{ path( 'equipment_overall' ) }}">Matériels</a></li>
+                                    </ul>
                                 </li>
 
                                 <li>
