--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
@@ -32,6 +32,11 @@
       	<form action="{{ path( 'product_parfumerie' ) }}">
          	<input type="submit" name="parfumerie" value="Parfumerie">
          </form>
+
+         <img src="{{asset('bundles/InstantSoin/Images/Buttons/materiel.jpg')}}" alt="Image impossible à charger">
+         <form action="{{ path( 'equipment_overall' ) }}">
+            <input type="submit" name="materiel" value="Les materiels d'esthétique">
+         </form>
          
 	   </div>
 
