--- a/app/Resources/views/base_estheticienne.html.twig
+++ b/app/Resources/views/base_estheticienne.html.twig
@@ -21,20 +21,9 @@
                         <nav>
                         <img class="logo" src="{{asset('bundles/InstantSoin/Images/bigpads.png')}}" alt="Impossible à charger">
                             <ul class="menu">
-                                                                    
-                                <li>
-                                    <a href="{{ path( 'product_overall' ) }}">Produits</a>
-                                    <ul>
-                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
-                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
-                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
-                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
-                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
-                                    </ul>
-                                </li>
 
                                 <li>
-                                    <a href="{{ path( 'services_overall' ) }}">Services</a>
+                                    <a href="{{ path( 'services_overall' ) }}">Prestations</a>
                                     <ul>
                                             <li><a href="services_face">Les soins visage</a></li>
                                             <li><a href="services_body">Les soins du corps</a></li>
@@ -42,12 +31,19 @@
                                             <li><a href="services_forfaits">Les forfaits soin</a></li>
                                             <li><a href="services_massages">Massages</a></li>
                                             <li><a href="services_peeling">Epilations</a></li>
-
                                     </ul>
                                 </li>
 
                                 <li>
-                                    <a href="{{ path( 'equipment_overall' ) }}">Matériels</a>
+                                    <a href="{{ path( 'product_overall' ) }}">La boutique</a>
+                                    <ul>
+                                            <li><a href="{{ path( 'product_cremes' ) }}">Crèmes de jour / crèmes de nuit</a></li>
+                                            <li><a href="{{ path( 'product_gommages' ) }}">Gommages et masques</a></li>
+                                            <li><a href="{{ path( 'product_maquillage' ) }}">Maquillage</a></li>
+                                            <li><a href="{{ path( 'product_lotions' ) }}">Démaquillants et lotions</a></li>
+                                            <li><a href="{{ path( 'product_parfumerie' ) }}">Parfumerie</a></li>
+                                            <li><a href="{{ path( 'equipment_overall' ) }}">Matériels</a></li>
+                                    </ul>
                                 </li>
 
                                 <li>
