--- a/src/InstantSoin/UserBundle/Resources/views/Security/contact.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/contact.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
         <h1>Me contacter</h1>
