--- a/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Security/profil_info.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'ProductBundle::layout.html.twig' %}
 {% block body %}
 <h1>Profil</h1>
 <ul class="menu">
