--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Bienvenue !{% endblock %}</title>
         {% block stylesheets %}
         <link href="//fonts.googleapis.com/css?family=Lily+Script One:400" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{{asset('bundles/InstantSoin/jquery/jquery-ui.css')}}">
         <link rel="stylesheet" href="{{asset('bundles/InstantSoin/css/bootstrap.css')}}">
         <link rel="stylesheet" href="{{asset('bundles/InstantSoin/css/style.css')}}">
         {% endblock %}
@@ -101,15 +102,21 @@
 
             {% block javascripts %}
             <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-            <script type="text/javascript">
+            <script type="text/javascript"></script>
+            <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+            <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+            <script>
             function initialisation(){
-                var centreCarte = new google.maps.LatLng(49.023402, 1.705735);
+                var centreCarte = new google.maps.LatLng(49.0217586,1.7138252);
                 var optionsCarte = {
                     zoom: 9,
                     center: centreCarte,
                     marker: true,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                }
+                    mapTypeId: google.maps.MapTypeId.ROADMAP,
+                    zoomControl: false,
+                    mapTypeControl: false,
+                    streetViewControl: false,
+                };
 
                 var maCarte = new google.maps.Map(document.getElementById("EmplacementDeMaCarte"), optionsCarte);
 
@@ -122,10 +129,16 @@
                     map: maCarte,
                     center: maCarte.getCenter(),
                     radius: 15000
-                }
+                };
                 var monCercle = new google.maps.Circle(optionsCercle);
             }
             google.maps.event.addDomListener(window, 'load', initialisation);
+            </script>
+            
+            <script>
+            $(function() {
+            $( "#accordion" ).accordion();
+            });
             </script>
             {% endblock %}
 
