--- a/src/InstantSoin/UserBundle/Resources/views/Estheticienne/estheticienne.html.twig
+++ b/src/InstantSoin/UserBundle/Resources/views/Estheticienne/estheticienne.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base_estheticienne.html.twig' %}
+{% extends 'UserBundle::layout_estheticienne.html.twig' %}
 
 {% block title %}
     Accueil Estheticienne
